# auto-coder

./: .env.example  Dockerfile  README.md  alembic.ini  autocodr.todo  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  docker-stack.yml  requirements.txt  test.ipynb
autocoder/: __main__.py  codebase.py  langchain_shortcuts.py  tasks.py
autocoder/.codebases/: .gitkeep
autocoder/api/: __init__.py  app.py  core.py  routes.py
autocoder/api/endpoints/: __init__.py  healthcheck.py  home.py  issue.py  login.py
autocoder/celery/: __init__.py  worker.py
autocoder/database/: __init__.py  base.py  engine.py  utils.py
autocoder/frontend/: Dockerfile  README.md  pubspec.yaml
autocoder/models/: __init__.py  codebase.py  issue.py  repository.py  templates.py
autocoder/utils/: __init__.py  chatgpt_api.py
autocodr/: Dockerfile  __init__.py  pyproject.toml  utils.py
autocodr/api/: __init__.py  core.py  routes.py  settings.py
autocodr/api/endpoints/: __init__.py  healthcheck.py  home.py  login.py
autocodr/api/utils/: __init__.py  auth.py  email.py  functils.py
autocodr/chain/: parser.py  shortcuts.py  templates.py
autocodr/chains/: shortcuts.py  templates.py
autocodr/codebase/: __init__.py  codebase.py
autocodr/database/: __init__.py  engine.py
autocodr/database/models/: __init__.py  base.py  task.py  user.py
autocodr/frontend/: base.html  home.html
autocodr/frontend/templates/: base.html  home.html
autocodr/repobox/: __init__.py  codebase.py
autocodr/tasks/: solve_issue.py
src/: __init__.py  __main__.py
src/models/: issue.py
(+25 files in other folders)
