[tool.poetry]
name = "autocodr"
version = "0.0.1"
authors = ["Shroominic <contact@shroominic.com>"]
description = "Autocodr is a platform for solving your github issues automatically."

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.99"
langchain = "^0.0.254"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
openai = "^0.27.8"
stripe = "^5.5.0"
emails = "^0.6.0"
asyncpg = "^0.28.0"
python-dotenv = "^1.0.0"
pygithub = "^1.59.1"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
black = "^22.12.0"
isort = "^5.11.2"
autoflake = "^2.0.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
sqlalchemy2-stubs = "^0.0.2a35"
pytest-cov = "^4.0.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
